# pluma

./: .dockerignore  .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/pluma/: generate_report.py
tests/: test_generate_report.py
tests/data/: gene.csv
tests/notebooks/: report.tex
