[tool.poetry]
name = "pluma"
version = "0.1.0"
description = "A package to write a report from a jupyter notebook"
authors = ["Amir Molavi <amir.molavi@gmail.com>"]
license = "MIT"
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
ipykernel = "^6.29.5"
openai = "~1.55"
ordered-set = "^4.1.0"
typer = "^0.14.0"
nbformat = "^5.10.4"
tqdm = "^4.67.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
jinja2 = "^3.1.4"
jupyterlab-latex = "^4.3.0"


[tool.poetry.group.dev.dependencies]
# Linting and formatting
isort = "~5.13.2"
ruff = "~0.7.2"
black = "~24.10.0"
pre-commit = "~4.0.1"

# Test
pytest = "~8.1"
coverage = { version = "~7.4", extras = ["toml"] }
pytest-cov = "~5.0"
nox_poetry = "^1.0.2"

[tool.ruff]
src = ["app"]
line-length = 120
target-version = "py312"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff.lint.per-file-ignores]
# Allow unused imports and star imports in __init__.py files
"__init__.py" = ["F401", "F403"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
